# AI-research-assistant

./: .gitignore  AI_Trends_2024_Research  Product_Requirement_Document.md  README.md  System_Design_Document.md  pyproject.toml  smolagents_multiagent_app.py
demo_result/: AI_Trends_2024_Research.md  automotive_battery_research_2023.txt
